@@ -1746,6 +1746,13 @@
         <regenerate/>
         <download/>
       </component>
+      <component name="gnumeric-functions" dir="gnumeric" group="office">
+        <podir dir="po-functions"/>
+        <potname name="gnumeric.pot"/>
+        <branch name="HEAD"/>
+        <regenerate/>
+        <download/>
+      </component>
     </version>
   </module>
   <module name="gok">
