@@ -1,3 +1,7 @@
+2005-02-20  Christian Rose  <menthos@menthos.com>
+
+	* translation-status.xml: Added gnumeric-functions.
+
 2005-02-13  Danilo Šegan  <dsegan@gmx.net>
 
 	* ignored-lang-list: Added "no" to the list.
